# wireguard-mesh

./: .gitignore  Pulumi.yaml  pyproject.toml  readme.md
mesh/: __main__.py  gretap.py  mesh.py  node.py  remote.py  types.py  util.py
mesh/pulumi/: main.py  provider.py  resource.py  util.py
