[tool.poetry]
name = "wireguard-mesh"
version = "0.1.0"
description = ""
authors = ["Phillip Sitbon <phillip.sitbon@gmail.com>"]
readme = "readme.md"

packages = [
    { include = "mesh" },
]

[tool.poetry.scripts]
mesh = "mesh.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
wireguard-tools = "^0.4.4"
attrs = "^23.1.0"
fabric = "^3.2.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
